[gd_scene load_steps=2 format=3 uid="uid://cdpdxvviop3ok"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_y6r0f"]

[node name="UI" type="CanvasLayer" groups=["ui"]]
process_mode = 3
script = ExtResource("1_y6r0f")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterRoot" type="Control" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Equipped" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Weapons"

[node name="WeaponIcons" type="HBoxContainer" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_left = 77.0
offset_top = 6.0
offset_right = 349.0
offset_bottom = 46.0

[node name="WeaponIcon1" type="TextureRect" parent="GUI/CharacterRoot/WeaponIcons"]
layout_mode = 2
expand_mode = 2

[node name="WeaponIcon2" type="TextureRect" parent="GUI/CharacterRoot/WeaponIcons"]
layout_mode = 2
expand_mode = 2

[node name="WeaponIcon3" type="TextureRect" parent="GUI/CharacterRoot/WeaponIcons"]
layout_mode = 2
expand_mode = 2

[node name="WeaponIcon4" type="TextureRect" parent="GUI/CharacterRoot/WeaponIcons"]
layout_mode = 2
expand_mode = 2

[node name="Augments" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_top = 57.0
offset_right = 74.0
offset_bottom = 80.0
text = "Augments"

[node name="Hp" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_top = 612.0
offset_right = 22.0
offset_bottom = 635.0
text = "HP"

[node name="Gold" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_left = 461.0
offset_top = 2.0
offset_right = 561.0
offset_bottom = 35.0
text = "Gold"

[node name="Resource" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_left = 1056.0
offset_top = 595.0
offset_right = 1128.0
offset_bottom = 618.0
text = "Resource"

[node name="Time" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_left = 462.0
offset_top = 58.0
offset_right = 562.0
offset_bottom = 91.0
text = "Time"

[node name="Phase" type="Label" parent="GUI/CharacterRoot"]
layout_mode = 0
offset_left = 932.0
offset_top = 8.0
offset_right = 1032.0
offset_bottom = 41.0
text = "Phase:"

[node name="ShoppingRoot" type="Control" parent="GUI"]
visible = false
custom_minimum_size = Vector2(1000, 640)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShoppingPanel" type="Panel" parent="GUI/ShoppingRoot"]
custom_minimum_size = Vector2(1000, 600)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00347222
anchor_top = 1.49537
anchor_right = 0.00347222
anchor_bottom = 1.49537
offset_left = 82.0
offset_top = -940.0
offset_right = 1082.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="GUI/ShoppingRoot/ShoppingPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0002
offset_bottom = 33.0002
grow_horizontal = 2
text = "Select Panel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShoppingOptions" type="HBoxContainer" parent="GUI/ShoppingRoot/ShoppingPanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -227.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpgradeRoot" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UpgradePanel" type="Panel" parent="GUI/UpgradeRoot"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.00347222
anchor_top = 1.49537
anchor_right = 0.00347222
anchor_bottom = 1.49537
offset_left = 82.0
offset_top = -940.0
offset_right = 1082.0
offset_bottom = -340.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="GUI/UpgradeRoot/UpgradePanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0002
offset_bottom = 33.0002
grow_horizontal = 2
text = "Select Panel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="HBoxContainer" parent="GUI/UpgradeRoot/UpgradePanel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -227.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="BossRoot" type="Control" parent="GUI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenuRoot" type="Control" parent="GUI"]
process_mode = 2
visible = false
anchors_preset = 0
offset_left = 350.0
offset_top = 25.0
offset_right = 750.0
offset_bottom = 625.0

[node name="PauseMenuPanel" type="Panel" parent="GUI/PauseMenuRoot"]
layout_mode = 0
offset_right = 400.0
offset_bottom = 600.0

[node name="Paused" type="Label" parent="GUI/PauseMenuRoot/PauseMenuPanel"]
layout_mode = 0
offset_left = 66.0
offset_top = 150.0
offset_right = 123.0
offset_bottom = 173.0
text = "Paused"

[node name="ResumeButton" type="Button" parent="GUI/PauseMenuRoot/PauseMenuPanel"]
layout_mode = 0
offset_left = 154.0
offset_top = 257.0
offset_right = 162.0
offset_bottom = 265.0
text = "Resume"

[node name="MoveOutTimer" type="Timer" parent="GUI"]

[connection signal="pressed" from="GUI/PauseMenuRoot/PauseMenuPanel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="timeout" from="GUI/MoveOutTimer" to="." method="_on_move_out_timer_timeout"]
